# pirireis

./: .gitignore  README.md  pyproject.toml
librarian/: bert.py  embeddings.py  llms.py  main.py  partition.py  prompts.py  testing.py
librarian/graphs/: graph_0USsyWjNe6nXWGkebYfYKC-VjQwJaA2ZS2HzALzgpgU.gml
src/: __init__.py  main.py
src/graph/: __init__.py  dstruct.py  partition.py
src/nn/: __init__.py  llms.py
src/utils/: __init__.py  db.py
tests/: testing.py
